--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
+    "apollo-server-express": "^2.5.0",
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.0",
