--- a/Server/package.json
+++ b/Server/package.json
@@ -16,11 +16,14 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.5.0",
+    "bcrypt": "^3.0.6",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.0",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8"
   }
 }
